# refrisystem

./: CMakeLists.txt  License.txt  README.md  main.cpp
db/: FoodData.json  RecipeData.json  Storage.json
hooks/: ColorfulCli.cpp  ColorfulCli.h  CutDecimal.cpp  CutDecimal.h  Input.cpp  Input.h  Table.cpp  TagLists.h
include/: ColorfulCli.h  Consts.h  DataManagement.h  Food.h  Ingredient.h  IngredientInfo.h  Interfaces.h  Recipe.h  RecipeDataManagement.h  RecipeRecommendation.h  Recommendation-impl.h  Recommendation.h  RefriRecipe.h  RefriStorage.h  RefriSystem.h  Refrigerator.h  Storage.h  StorageDataManagement.h  StorageType.h
source/: FoodData.json  RecipeData.json  Storage.json  Storage_makeFoodTest(base).json  Storage_makeFoodTest.json  recipeData.json
src/: ColorfulCli.cpp  IngredientInfo.cpp  Menu.cpp  Recipe.cpp  RecipeDataManagement.cpp  RecipeRecommendation.cpp  Recommendation.cpp  RefriRecipe.cpp  RefriSystem.cpp  Refrigerator.cpp  Storage.cpp  StorageDataManagement.cpp  Table.cpp  TimeSystem.cpp
utils/: Input.cpp  Input.h  Table.cpp  Table.h  Title.cpp  Title.h
